--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@react-navigation/bottom-tabs": "^7.0.12",
     "@react-navigation/native": "^7.0.7",
     "@react-navigation/native-stack": "^7.1.8",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "expo": "~52.0.11",
+    "expo-linear-gradient": "~14.0.1",
     "expo-status-bar": "~2.0.0",
     "firebase": "^11.0.2",
     "kotinen": "file:",
@@ -23,8 +25,10 @@
     "react-native": "0.76.3",
     "react-native-calendars": "^1.1307.0",
     "react-native-dotenv": "^3.4.11",
+    "react-native-gifted-charts": "^1.4.47",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13"
   },
   "devDependencies": {
