--- a/package.json
+++ b/package.json
@@ -4,18 +4,20 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.0",
+    "@google-cloud/storage": "^7.14.0",
     "@react-navigation/bottom-tabs": "^7.0.12",
     "@react-navigation/native": "^7.0.7",
     "@react-navigation/native-stack": "^7.1.8",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "expo": "~52.0.11",
+    "expo-camera": "~16.0.7",
     "expo-linear-gradient": "~14.0.1",
     "expo-status-bar": "~2.0.0",
     "firebase": "^11.0.2",
@@ -29,7 +31,9 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
-    "react-native-web": "~0.19.13"
+    "react-native-vision-camera": "^4.6.3",
+    "react-native-web": "~0.19.13",
+    "expo-location": "~18.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
