--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "~52.0.11",
     "expo-camera": "~16.0.7",
     "expo-linear-gradient": "~14.0.1",
+    "expo-location": "~18.0.2",
     "expo-status-bar": "~2.0.0",
     "firebase": "^11.0.2",
     "kotinen": "file:",
@@ -32,8 +33,7 @@
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
     "react-native-vision-camera": "^4.6.3",
-    "react-native-web": "~0.19.13",
-    "expo-location": "~18.0.2"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
